Implemented example from: http://www.perfectapk.com/android-listfragment-tutorial.html
Next step: load real data from API requests and auto-load more when reaching bottom of scrolling list
See
- http://www.informit.com/articles/article.aspx?p=2066699&seqNum=4
- http://developer.android.com/training/improving-layouts/smooth-scrolling.html#ViewHolder (performance tips)

--- a/spotifyWebApiAndroid/app/src/main/res/values/strings.xml
+++ b/spotifyWebApiAndroid/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
 <resources>
     <string name="app_name">spotify-web-api-example</string>
     <string name="app_hint">Search for a track</string>
+
+    <string name="icon_content_description">icon_content_description</string>
+    <string name="bebo">Bebo title</string>
+    <string name="bebo_description">Bebo decription...</string>
+    <string name="youtube">Youtube title</string>
+    <string name="youtube_description">Youtube decription...</string>
 </resources>
