--- a/spotifyWebApiAndroid/app/src/main/res/values/strings.xml
+++ b/spotifyWebApiAndroid/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="bebo_description">Bebo decription...</string>
     <string name="youtube">Youtube title</string>
     <string name="youtube_description">Youtube decription...</string>
+
+    <string name="loading">Loading...</string>
 </resources>
